src/styles/base.sass
@use "../themes/custom-jquery-mobile-theme.css"
@use "../themes/jquery.mobile.icons.min.css" as jquery-mobile-icons
@use "../../vendor/jquery.mobile-1.4.5/jquery.mobile.structure-1.4.5.min.css" as jquery-mobile-structure

@use "sass:map"

// IMPORT OTHER CUSTOM STYLESHEETS
@use "landing"
@use "home"
@use "vendor_stories"
@use "location_search"
@use "set_location"
@use "vendor_rating"
@use "checkout"
@use "variables"

@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap")
@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")

div[data-role="page"].feedU-page
    * :not(.fa)
        font-family: variables.$font-family
        text-shadow: none

    .ui-header
        background-color: map.get(variables.$feedU-theme, "primary-color")
        display: flex
        padding: 5px 0px
        justify-content: center

    .ui-footer

        .full-width-btn
            background-color: map.get(variables.$feedU-theme, "primary-color")
            color: map.get(variables.$feedU-theme, "background-color")
            text-transform: uppercase
            min-width: 100%
            margin: 0
            border: none
            padding: 15px

// .ui-slider-handle
//     background-color: $primary-color
//     border-color: 2px solid #B34040

// .full-width-slider
//     input
//         display: none

// .full-width-slider
//     .ui-slider-track
//         margin-left: 15px

// @mixin my-controlgroup-controls
//     background-color: $white
//     border: none
//     font-weight: 400
//     // padding: 5px

// @mixin my-checkbox-off
//     &:after
//         background-color: $white
//         opacity: 1.0
//         border: 2px solid $primary-color

// @mixin my-checkbox-on
//     &:after
//         background-color: $primary-color
//         border: 2px solid $primary-color

// div[data-role="page"]
//     div.ui-controlgroup-controls
//         div
//             label.ui-checkbox // This is the checkbox row
//                 &-off, &-on
//                     @include my-controlgroup-controls

//                 &-off // Checkbox in the inactive state
//                     @include my-checkbox-off

//                 &-on // Checkbox in the active state
//                     @include my-checkbox-on

